--- a/UI/MauiEmbedding/TelerikApp/src/TelerikApp/TelerikApp/TelerikApp.csproj
+++ b/UI/MauiEmbedding/TelerikApp/src/TelerikApp/TelerikApp/TelerikApp.csproj
@@ -1,57 +1,65 @@
-<Project Sdk="Uno.Sdk">
+﻿<Project Sdk="Uno.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net9.0-android;net9.0-ios;net9.0-maccatalyst;net9.0-windows10.0.26100</TargetFrameworks>
+	<TargetFrameworks>net9.0-android;net9.0-ios;net9.0-maccatalyst;net9.0-windows10.0.26100</TargetFrameworks>
 
-    <OutputType>Exe</OutputType>
-    <UnoSingleProject>true</UnoSingleProject>
+	<OutputType>Exe</OutputType>
+	<UnoSingleProject>true</UnoSingleProject>
 
-    <!-- Display name -->
-    <ApplicationTitle>TelerikApp</ApplicationTitle>
-    <!-- App Identifier -->
-    <ApplicationId>com.companyname.TelerikApp</ApplicationId>
-    <!-- Versions -->
-    <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
-    <ApplicationVersion>1</ApplicationVersion>
-    <!-- Package Publisher -->
-    <ApplicationPublisher>SteveBilogan</ApplicationPublisher>
-    <!-- Package Description -->
-    <Description>TelerikApp powered by Uno Platform.</Description>
-    <!--
-      If you encounter this error message:
+	<!-- Display name -->
+	<ApplicationTitle>TelerikApp</ApplicationTitle>
+	<!-- App Identifier -->
+	<ApplicationId>com.companyname.TelerikApp</ApplicationId>
+	<!-- Versions -->
+	<ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
+	<ApplicationVersion>1</ApplicationVersion>
+	<!-- Package Publisher -->
+	<ApplicationPublisher>SteveBilogan</ApplicationPublisher>
+	<!-- Package Description -->
+	<Description>TelerikApp powered by Uno Platform.</Description>
 
-        error NETSDK1148: A referenced assembly was compiled using a newer version of Microsoft.Windows.SDK.NET.dll.
-        Please update to a newer .NET SDK in order to reference this assembly.
+	<!-- TODO: Set EnableTelerik to true -->
 
-      This means that the two packages below must be aligned with the "build" version number of
-      the "Microsoft.Windows.SDK.BuildTools" package above, and the "revision" version number
-      must be the highest found in https://www.nuget.org/packages/Microsoft.Windows.SDK.NET.Ref.
-    -->
-    <!-- <WindowsSdkPackageVersion>10.0.22621.28</WindowsSdkPackageVersion> -->
+	<!--
+	  If you encounter this error message:
 
-    <!--
-      UnoFeatures let's you quickly add and manage implicit package references based on the features you want to use.
-      https://aka.platform.uno/singleproject-features
-    -->
-    <UnoFeatures>
-      MauiEmbedding;
-      Toolkit;
-      Navigation;
-      Logging;
-      LoggingSerilog;
-      Localization;
-      Lottie;
-    </UnoFeatures>
+		error NETSDK1148: A referenced assembly was compiled using a newer version of Microsoft.Windows.SDK.NET.dll.
+		Please update to a newer .NET SDK in order to reference this assembly.
+
+	  This means that the two packages below must be aligned with the "build" version number of
+	  the "Microsoft.Windows.SDK.BuildTools" package above, and the "revision" version number
+	  must be the highest found in https://www.nuget.org/packages/Microsoft.Windows.SDK.NET.Ref.
+	-->
+	<!-- <WindowsSdkPackageVersion>10.0.22621.28</WindowsSdkPackageVersion> -->
+
+	<!--
+	  UnoFeatures let's you quickly add and manage implicit package references based on the features you want to use.
+	  https://aka.platform.uno/singleproject-features
+	-->
+	<UnoFeatures>
+	  MauiEmbedding;
+	  Toolkit;
+	  Navigation;
+	  Logging;
+	  LoggingSerilog;
+	  Localization;
+	  Lottie;
+	</UnoFeatures>
   </PropertyGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Business\Data\AppleStockPrices.json" />
-    <EmbeddedResource Include="Business\Data\OrdersDataSource.xml" />
-    <EmbeddedResource Include="Business\Data\pdfviewer-firstlook.pdf" />
-    <EmbeddedResource Include="Business\Data\PeopleDataSource.xml" />
+	<EmbeddedResource Include="Business\Data\AppleStockPrices.json" />
+	<EmbeddedResource Include="Business\Data\OrdersDataSource.xml" />
+	<EmbeddedResource Include="Business\Data\pdfviewer-firstlook.pdf" />
+	<EmbeddedResource Include="Business\Data\PeopleDataSource.xml" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TelerikApp.MauiControls\TelerikApp.MauiControls.csproj" />
+	<ProjectReference Include="..\TelerikApp.MauiControls\TelerikApp.MauiControls.csproj" />
   </ItemGroup>
+
+   <ItemGroup>
+        <None Remove="Presentation\**\*.notelerik.xaml"/>
+        <Page Remove="Presentation\**\*.notelerik.xaml"/>
+    </ItemGroup>
 
 </Project>
