--- a/UI/MauiEmbedding/TelerikApp/src/TelerikApp/TelerikApp.MauiControls/TelerikApp.MauiControls.csproj
+++ b/UI/MauiEmbedding/TelerikApp/src/TelerikApp/TelerikApp.MauiControls/TelerikApp.MauiControls.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows')) or '$(EnableWindowsTargeting)' == 'true'">net9.0-windows10.0.26100</TargetFrameworks>
@@ -16,10 +16,22 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<!-- TODO: Uncomment -->
-		<PackageReference Include="Telerik.UI.for.Maui" />
 		<PackageReference Include="Microsoft.Maui.Controls" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" />
 	</ItemGroup>
+
+	<Choose>
+		<When Condition="'$(EnableTelerik)'=='true'">
+			<ItemGroup>
+				<PackageReference Include="Telerik.UI.for.Maui" />
+			</ItemGroup>
+		</When>
+		<Otherwise>
+			<ItemGroup>
+				<MauiXaml Remove="Views\**\*.xaml" />
+				<Compile Remove="Views\**\*.xaml.cs" />
+			</ItemGroup>
+		</Otherwise>
+	</Choose>
 
 </Project>
