chore(deps): updated PackageReference to recommended Microsoft.IdentitityModel.JsonWebTokens

--- a/reference/ToDo/src/ToDo/Properties/launchSettings.json
+++ b/reference/ToDo/src/ToDo/Properties/launchSettings.json
@@ -35,6 +35,16 @@
     "ToDo (WinAppSDK Packaged)": {
       "commandName": "MsixPackage",
       "compatibleTargetFramework": "windows"
+    },
+    "ToDo (Desktop)": {
+      "commandName": "Project",
+      "compatibleTargetFramework": "desktop"
+    },
+    "ToDo (Desktop WSL2)": {
+      "commandName": "WSL2",
+      "commandLineArgs": "{ProjectDir}/bin/Debug/net9.0-desktop/ToDo-App.dll",
+      "distributionName": "",
+      "compatibleTargetFramework": "desktop"
     }
   }
 }
