--- a/reference/ToDo/src/Directory.Packages.props
+++ b/reference/ToDo/src/Directory.Packages.props
@@ -6,6 +6,6 @@
     See https://aka.platform.uno/using-uno-sdk#implicit-packages for more information regarding the Implicit Packages.
   -->
   <ItemGroup>
-    <PackageVersion Include="System.IdentityModel.Tokens.Jwt" Version="7.6.0" />
+    <PackageVersion Include="Microsoft.IdentityModel.JsonWebTokens" Version="8.7.0" />
   </ItemGroup>
 </Project>
