--- a/UI/MVUX/src/MessagingPeopleApp/MessagingPeopleApp.csproj
+++ b/UI/MVUX/src/MessagingPeopleApp/MessagingPeopleApp.csproj
@@ -1,13 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Uno.Sdk">
 	<PropertyGroup>
-		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows')) or '$(EnableWindowsTargeting)' == 'true'">$(TargetFrameworks);net8.0-windows10.0.19041</TargetFrameworks>
-		<TargetFrameworks>$(TargetFrameworks);net8.0;net8.0-ios;net8.0-android;net8.0-maccatalyst</TargetFrameworks>
+		<TargetFrameworks>net9.0-desktop;net9.0-windows10.0.19041;net9.0;net9.0-ios;net9.0-android;net9.0-maccatalyst</TargetFrameworks>
 
+	<UnoFeatures>
+		Hosting;
+		Toolkit;
+		MVUX;
+		Logging;
+	</UnoFeatures>
 		<!-- Ensures the .xr.xml files are generated in a proper layout folder -->
-		<GenerateLibraryLayout>true</GenerateLibraryLayout>
+		<!--<GenerateLibraryLayout>true</GenerateLibraryLayout>-->
 	</PropertyGroup>
 
-	<ItemGroup>
+	<!--<ItemGroup>
 		<PackageReference Include="Uno.Extensions.Reactive.Messaging" />
 		<PackageReference Include="Uno.Toolkit.WinUI" />
 		<PackageReference Include="Uno.WinUI" />
@@ -15,42 +20,18 @@
 		<PackageReference Include="Uno.Extensions.Hosting.WinUI" />
 		<PackageReference Include="Uno.Extensions.Reactive.WinUI" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" />
-	</ItemGroup>
-
-	<Choose>
-		<When Condition="$(IsWinAppSdk)">
-			<PropertyGroup>
-				<!--
-				If you encounter this error message:
-
-					error NETSDK1148: A referenced assembly was compiled using a newer version of Microsoft.Windows.SDK.NET.dll.
-					Please update to a newer .NET SDK in order to reference this assembly.
-
-				This means that the two packages below must be aligned with the "build" version number of
-				the "Microsoft.Windows.SDK.BuildTools" package above, and the "revision" version number
-				must be the highest found in https://www.nuget.org/packages/Microsoft.Windows.SDK.NET.Ref.
-				-->
-				<!-- <WindowsSdkPackageVersion>10.0.22621.28</WindowsSdkPackageVersion> -->
-			</PropertyGroup>
-			<ItemGroup>
-				<PackageReference Include="Microsoft.WindowsAppSDK" />
-				<PackageReference Include="Microsoft.Windows.SDK.BuildTools" />
-			</ItemGroup>
-		</When>
-		<Otherwise>
-			<ItemGroup>
-				<Content Include="Assets\**" />
-				<Page Include="**\*.xaml" Exclude="bin\**\*.xaml;obj\**\*.xaml" />
-				<Compile Update="**\*.xaml.cs">
-					<DependentUpon>%(Filename)</DependentUpon>
-				</Compile>
-				<PRIResource Include="**\*.resw" />
-			</ItemGroup>
-		</Otherwise>
-	</Choose>
+	</ItemGroup>-->
 
 	<ItemGroup>
-		<UnoImage Include="Assets\**\*.svg" />
-		<UpToDateCheckInput Include="**\*.xaml" Exclude="bin\**\*.xaml;obj\**\*.xaml" />
+		<!--<UnoImage Include="Assets\Images\*" />-->
+		<UnoIcon Include="Assets\Icons\*" />
+		<UnoIcon Include="Assets\Icons\iconapp.svg"
+				ForegroundFile="Assets\Icons\appconfig.svg"
+				ForegroundScale="0.65"
+				Color="#00000000" />
+		<UnoSplashScreen
+			Include="Assets\Splash\splash_screen.svg"
+			BaseSize="128,128"
+			Color="#086AD1" />
 	</ItemGroup>
 </Project>
