feat(PeopleApp): Transfer to Mvux.sln, Migrate to single Head

--- a/UI/MVUX/src/PeopleApp/PeopleApp.csproj
+++ b/UI/MVUX/src/PeopleApp/PeopleApp.csproj
@@ -2,10 +2,6 @@
 	<PropertyGroup>
 		<TargetFrameworks>net9.0-desktop;net9.0-windows10.0.19041;net9.0;net9.0-ios;net9.0-android;net9.0-maccatalyst</TargetFrameworks>
 
-		<!-- Ensures the .xr.xml files are generated in a proper layout folder --><!--
-		<GenerateLibraryLayout>true</GenerateLibraryLayout>-->
-	
-	
 		<UnoFeatures>
 			Hosting;
 			Toolkit;
@@ -13,6 +9,7 @@
 			Logging;
 		</UnoFeatures>
 	</PropertyGroup>
+
 	<!--<ItemGroup>
 		<PackageReference Include="Uno.Toolkit.WinUI" Version="5.0.15" />
 		<PackageReference Include="Uno.WinUI" Version="5.1.87" />
@@ -22,6 +19,7 @@
 	</ItemGroup>-->
 
 	<ItemGroup>
+		<!--<UnoImage Include="Assets\Images\*" />-->
 		<UnoIcon Include="Assets\Icons\*" />
 		<UnoIcon Include="Assets\Icons\iconapp.svg"
 				ForegroundFile="Assets\Icons\appconfig.svg"
