--- a/UI/MVUX/src/EditablePeopleApp/Properties/launchsettings.json
+++ b/UI/MVUX/src/EditablePeopleApp/Properties/launchsettings.json
@@ -1,10 +1,42 @@
 {
-  "profiles": {
-	"EditablePeopleApp.Windows (Package)": {
-	  "commandName": "MsixPackage"
-	},
-	"EditablePeopleApp.Windows (Unpackaged)": {
-	  "commandName": "Project"
+	"profiles": {
+		// This profile is first in order for dotnet run to pick it up by default
+		"EditablePeopleApp (WebAssembly)": {
+			"commandName": "Project",
+			"dotnetRunMessages": true,
+			"launchBrowser": true,
+			"applicationUrl": "http://localhost:5000",
+			"inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
+			"environmentVariables": {
+				"ASPNETCORE_ENVIRONMENT": "Development"
+			}
+		},
+		"EditablePeopleApp (WebAssembly IIS Express)": {
+			"commandName": "IISExpress",
+			"launchBrowser": true,
+			"inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
+			"environmentVariables": {
+				"ASPNETCORE_ENVIRONMENT": "Development"
+			}
+		},
+		// Note: In order to select this profile, you'll need to comment the `Packaged` profile below until this is fixed: https://aka.platform.uno/wasdk-maui-debug-profile-issue
+		"EditablePeopleApp (WinAppSDK Unpackaged)": {
+			"commandName": "Project",
+			"compatibleTargetFramework": "windows"
+		},
+		"EditablePeopleApp (WinAppSDK Packaged)": {
+			"commandName": "MsixPackage",
+			"compatibleTargetFramework": "windows"
+		},
+		"EditablePeopleApp (Desktop)": {
+			"commandName": "Project",
+			"compatibleTargetFramework": "desktop"
+		},
+		"EditablePeopleApp (Desktop WSL2)": {
+			"commandName": "WSL2",
+			"commandLineArgs": "{ProjectDir}/bin/Debug/net9.0-desktop/EditablePeopleApp.dll",
+			"distributionName": "",
+			"compatibleTargetFramework": "desktop"
+		}
 	}
-  }
 }
