chore: move reference samples to Skia rendering

--- a/reference/ToDo/src/ToDo/ToDo.csproj
+++ b/reference/ToDo/src/ToDo/ToDo.csproj
@@ -40,6 +40,8 @@
       Localization;
       Navigation;
       ThemeService;
+      SkiaRenderer;
+      HttpRefit;
     </UnoFeatures>
   </PropertyGroup>
 
