--- a/reference/TubePlayer/src/TubePlayer/TubePlayer.csproj
+++ b/reference/TubePlayer/src/TubePlayer/TubePlayer.csproj
@@ -38,6 +38,8 @@
       Navigation;
       Http;
       MediaElement;
+      SkiaRenderer;
+      HttpRefit;
     </UnoFeatures>
   </PropertyGroup>
 
