--- a/UI/NativeElementHostingDesktop/NativeElementHostingDesktop/NativeElementHostingDesktop.csproj
+++ b/UI/NativeElementHostingDesktop/NativeElementHostingDesktop/NativeElementHostingDesktop.csproj
@@ -27,4 +27,9 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Windows.CsWin32" Version="0.3.106" />
+  </ItemGroup>
+
 </Project>
