--- a/UI/NativeElementHostingDesktop/Directory.Build.props
+++ b/UI/NativeElementHostingDesktop/Directory.Build.props
@@ -12,4 +12,8 @@
     -->
     <NoWarn>$(NoWarn);NU1507;NETSDK1201;PRI257</NoWarn>
   </PropertyGroup>
+
+  <ItemGroup>
+      <PackageVersion Include="Microsoft.Windows.CsWin32" Version="0.3.106" />
+  </ItemGroup>
 </Project>
