--- a/UI/NativeElementHostingDesktop/NativeElementHostingDesktop/NativeElementHostingDesktop.csproj
+++ b/UI/NativeElementHostingDesktop/NativeElementHostingDesktop/NativeElementHostingDesktop.csproj
@@ -29,7 +29,7 @@
 
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Windows.CsWin32" Version="0.3.106" />
+    <PackageReference Include="Microsoft.Windows.CsWin32" />
   </ItemGroup>
 
 </Project>
