--- a/reference/Counter/CSharp-MVVM/Directory.Build.props
+++ b/reference/Counter/CSharp-MVVM/Directory.Build.props
@@ -11,5 +11,7 @@
       PRI257: Ignore default language (en) not being one of the included resources (eg en-us, en-uk)
     -->
     <NoWarn>$(NoWarn);NU1507;NETSDK1201;PRI257</NoWarn>
+    <!-- Required by uno 6.0 (WinRT.Runtime.dll >= 2.2.0) -->
+    <WindowsSdkPackageVersion>10.0.19041.57</WindowsSdkPackageVersion>
   </PropertyGroup>
 </Project>
