chore: maccatalyst remove

--- a/UI/MauiEmbedding/MauiCommunityToolkitApp/MauiCommunityToolkitApp/MauiCommunityToolkitApp.csproj
+++ b/UI/MauiEmbedding/MauiCommunityToolkitApp/MauiCommunityToolkitApp/MauiCommunityToolkitApp.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Uno.Sdk">
   <PropertyGroup>
 	<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows')) or '$(EnableWindowsTargeting)' == 'true'">$(TargetFrameworks);net9.0-windows10.0.26100</TargetFrameworks>
-	<TargetFrameworks>$(TargetFrameworks);net9.0-ios;net9.0-android;net9.0-maccatalyst</TargetFrameworks>
+	<TargetFrameworks>$(TargetFrameworks);net9.0-ios;net9.0-android</TargetFrameworks>
 	<TargetFrameworks Condition="'$(OverrideTargetFrameworks)'!=''">$(OverrideTargetFrameworks)</TargetFrameworks>
 	<OutputType>Exe</OutputType>
 	<UnoSingleProject>true</UnoSingleProject>
