--- a/UI/MauiEmbedding/MauiCommunityToolkitApp/Directory.Build.props
+++ b/UI/MauiEmbedding/MauiCommunityToolkitApp/Directory.Build.props
@@ -12,6 +12,7 @@
       PRI257: Ignore default language (en) not being one of the included resources (eg en-us, en-uk)
     -->
     <NoWarn>$(NoWarn);NU1507;NETSDK1201;NETSDK1023;PRI257</NoWarn>
-    <UnoExtensionsVersion>6.1.0-dev.5</UnoExtensionsVersion>
+    <UnoExtensionsVersion>6.0.9</UnoExtensionsVersion>
+    <WindowsSdkPackageVersion>10.0.19041.57</WindowsSdkPackageVersion>
   </PropertyGroup>
 </Project>
