--- a/UI/MauiEmbedding/MauiCommunityToolkitApp/MauiCommunityToolkitApp.MauiControls/MauiCommunityToolkitApp.MauiControls.csproj
+++ b/UI/MauiEmbedding/MauiCommunityToolkitApp/MauiCommunityToolkitApp.MauiControls/MauiCommunityToolkitApp.MauiControls.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows')) or '$(EnableWindowsTargeting)' == 'true'">net9.0-windows10.0.26100</TargetFrameworks>
@@ -11,6 +11,18 @@
 
     <UseMaui>true</UseMaui>
     <SingleProject>true</SingleProject>
+
+	<!--
+	  If you encounter this error message:
+
+		error NETSDK1148: A referenced assembly was compiled using a newer version of Microsoft.Windows.SDK.NET.dll.
+		Please update to a newer .NET SDK in order to reference this assembly.
+
+	  This means that the two packages below must be aligned with the "build" version number of
+	  the "Microsoft.Windows.SDK.BuildTools" package above, and the "revision" version number
+	  must be the highest found in https://www.nuget.org/packages/Microsoft.Windows.SDK.NET.Ref.
+	-->
+	 <WindowsSdkPackageVersion>10.0.22621.57</WindowsSdkPackageVersion> 
   </PropertyGroup>
 
   <ItemGroup>
