chore(Commerce): Update verseion and UnoFeatures chore: Update Windows PublishProfiles to the Dir where the current templates store them
Packages has been referencing Refit, but we only had http as feature
Should be checked, if MacCatalyst is still a valid Platform to have in the Platforms folder and TargetFrameworks list

--- a/reference/Commerce/src/Commerce/Commerce.csproj
+++ b/reference/Commerce/src/Commerce/Commerce.csproj
@@ -1,6 +1,6 @@
-<Project Sdk="Uno.Sdk">
+﻿<Project Sdk="Uno.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net9.0-android;net9.0-ios;net9.0-maccatalyst;net9.0-windows10.0.26100;net9.0-browserwasm;net9.0-desktop</TargetFrameworks>
+    <TargetFrameworks>net9.0-desktop;net9.0-android;net9.0-ios;net9.0-maccatalyst;net9.0-windows10.0.26100;net9.0-browserwasm</TargetFrameworks>
 
     <OutputType>Exe</OutputType>
     <UnoSingleProject>true</UnoSingleProject>
@@ -36,12 +36,13 @@
       MVUX;
       Mvvm;
       Configuration;
+      HttpRefit;
       Http;
       Skia;
       Serialization;
       Localization;
       Navigation;
-      ExtensionsCore;
+      <!--ExtensionsCore;-->
       SkiaRenderer;
     </UnoFeatures>
   </PropertyGroup>
@@ -54,10 +55,10 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="products.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="reviews.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
 </Project>
