chore: Updating to gpt 5

--- a/UI/ChatGPT/src/ChatGPT/ChatGPT.csproj
+++ b/UI/ChatGPT/src/ChatGPT/ChatGPT.csproj
@@ -25,12 +25,13 @@
       https://aka.platform.uno/singleproject-features
     -->
 	<UnoFeatures>
-	  CSharpMarkup;
-	  Material;
-	  Hosting;
-	  Toolkit;
-	  MVUX;
-	  Configuration;
+		CSharpMarkup;
+		Material;
+		Hosting;
+		Toolkit;
+		MVUX;
+		Configuration;
+		SkiaRenderer;
 	</UnoFeatures>
   </PropertyGroup>
   <ItemGroup>
