--- a/UI/ChatGPT/src/Directory.Packages.props
+++ b/UI/ChatGPT/src/Directory.Packages.props
@@ -7,6 +7,6 @@
   <ItemGroup>
   </ItemGroup>
   <ItemGroup>
-    <PackageVersion Include="OpenAI" Version="2.0.0-beta.7" />
+    <PackageVersion Include="OpenAI" Version="2.3.0" />
   </ItemGroup>
 </Project>
