chore: update the SKCanvasElementShowcase sample

--- a/UI/SKCanvasElementShowcase/Directory.Packages.props
+++ b/UI/SKCanvasElementShowcase/Directory.Packages.props
@@ -6,5 +6,9 @@
     See https://aka.platform.uno/using-uno-sdk#implicit-packages for more information regarding the Implicit Packages.
   -->
   <ItemGroup>
+    <PackageVersion Include="Uno.WinUI.Graphics2DSK" Version="6.2.0-dev.138" />
+    <PackageVersion Include="Uno.WinUI.Graphics2DSK" Version="6.2.0-dev.138" />
+    <PackageVersion Include="Uno.WinUI.Graphics2DSK" Version="6.2.0-dev.138" />
+    <PackageVersion Include="Uno.WinUI.Graphics2DSK" Version="6.2.0-dev.138" />
   </ItemGroup>
 </Project>
